# py-dj-po-project-test

./: .pre-commit-config.yaml  pyproject.toml
src/sample/: settings.py  urls.py
src/sample/calc/: views.py
